<resources>
    <string name="app_name">Morning Helper</string>
    <string name="skip">Skip</string>
    <string name="welcome_text">Hello! It\'s a pleasure to be your Helper! I\'ll do anything to make your mornings better and beautiful</string>
    <string name="set_alarm">"Set up an alarm with various games to wake up effectively And if you fell asleep I\'ll inform your friends about it"</string>
    <string name="fell_asleep">And if you fell asleep I\'ll inform your friends about it</string>
    <string name="organize_activities">Organize your morning activities: read news, look up for daily horoscopes or write a to-do list</string>
    <string name="keep_track_habits">Keep track of your morning habits to make your day more productive</string>
    <string name="begin">Begin</string>
    <string name="let_s_organize_your_morning">Let\'s organize your morning</string>
    <string name="morning">Morning</string>
    <string name="helper">Helper</string>
    <string name="horoscopes">Horoscopes</string>
    <string name="habit_tracker">Habit Tracker</string>
    <string name="upcoming_alarms">Upcoming alarms</string>
    <string name="to_do_list">To Do List</string>
    <string name="swipe_to_see_more">Swipe up to see more</string>
    <string name="hello_name">Hello, Name!</string>
    <string name="have_a_good_day">Have a good day..</string>
    <string name="your_name">your name</string>
    <string name="enter_your_name_and_let_s_begin">Enter your name and let\'s begin!</string>
    <string name="alarms">Alarms</string>
    <string name="notes">Notes</string>
    <string name="habits_tracker">Habits tracker</string>
    <string name="music">Music</string>
    <string name="morning_lower_case">morning</string>
    <string name="horoscope_domain">https://horoscope5.p.rapidapi.com/general/</string>
    <string name="incorrect_request">Incorrect Request</string>
    <string name="an_error_occurred_please_try_again">an error occurred please try again</string>
    <string name="horoscope">Horoscope</string>
    <string name="horoscope_key">7fcf43cdf4msh33c143365e50c90p19b324jsn4f4b2993b5f7</string>
    <string name="your_daily_horoscope">Read your daily horoscope</string>
    <string name="search_your_sign_here">search your sign here</string>
    <string name="repeat">Repeat</string>
    <string name="never">never</string>
    <string name="ringtone">Ringtone</string>
    <string name="dismiss_with">Dismiss With</string>
    <string name="default_text">Default</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="label">Label</string>
    <string name="enter_your_label">Enter your label</string>
    <string name="save">Save</string>
    <string name="send_automatic_message">Send Automatic Message</string>
    <string name="sms">sms</string>
    <string name="number">number</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="missed_alarms">Missed alarms</string>
    <string name="after_how_many_alarms">after how many alarms</string>
    <string name="_5_min">5 min</string>
    <string name="set_a_new_alarm_with_interesting_options">Set a new alarm with interesting options</string>
    <string name="no_alarms_yet">No alarms yet</string>
    <string name="alarm_options">Alarm Options</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="answer">Answer</string>
    <string name="_5">5</string>
    <string name="min">min</string>
    <string name="see_more">See More</string>
    <string name="loading">Loading…</string>
    <string name="read_the_news_from_all_around_the_world">Read the news from all around the world</string>
    <string name="click_here_to_get_location">Click here to get location</string>
    <string name="tbilisi_georgia">Tbilisi, Georgia</string>
    <string name="change_location">Change Location</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="createNote">Create Note</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_note">Edit Note</string>
    <string name="search_note">Search note</string>
    <string name="hi_add_your_first_note">Hi, add your first note</string>
    <string name="reminder">Reminder</string>
    <string name="notify">notify</string>
    <string name="colon">:</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="choose_date">Choose date</string>
    <string name="click_to_set_reminder">Click to set reminder</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
</resources>