<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.intro_activity.fragments.IntroAlarm">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@drawable/button_background_white"
        android:contentDescription="@string/set_alarm"
        android:padding="40dp"
        android:src="@drawable/sloth_well_done" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/enter_your_name_and_let_s_begin"
        android:textColor="@color/redLightColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_cream"
        android:hint="@string/your_name"
        android:textStyle="bold"
        android:padding="10dp"
        android:maxLines="1"
        android:maxLength="25"
        android:ellipsize="end"
        android:textColor="@color/greenColor"
        android:textColorHint="@color/greenColor" />


</LinearLayout>