<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/surati2"
    android:orientation="vertical"
    tools:context=".ui.HomeActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


<!--        <Button-->
<!--            android:layout_gravity="end"-->
<!--            android:id="@+id/permission"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"/>-->

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="5dp"
            android:src="@mipmap/sloth_wathcher" />

        <TextView
            android:id="@+id/helloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/fredoka_one"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/hello_name"
            android:textColor="@color/redLightColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/goodDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/fredoka_one"
            android:padding="8dp"
            android:text="@string/have_a_good_day"
            android:textColor="#AE8080"
            android:textSize="16sp" />


    </FrameLayout>


    <LinearLayout
        android:id="@+id/whiteLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_rectangle_bg"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/let_s_organize_your_morning"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/topicsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/alarmsCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#EDDDC4"
                        android:gravity="start"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fredoka_one"
                            android:text="@string/upcoming_alarms"
                            android:textColor="@color/greenColor"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/upcomingAlarmTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="13:00 TUE"
                            android:textSize="14sp" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/newsCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#E7B34D"
                        android:fontFamily="@font/fredoka_one"
                        android:padding="10dp"
                        android:text="News"
                        android:textColor="@color/redLightColor"
                        android:textSize="18sp" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/horoscopesCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/greenColor"
                        android:fontFamily="@font/fredoka_one"
                        android:padding="10dp"
                        android:text="@string/horoscopes"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/habitTrackerCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fredoka_one"
                        android:padding="10dp"
                        android:text="@string/habit_tracker"
                        android:textSize="18sp" />


                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/toDoListCardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellowColor"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fredoka_one"
                            android:padding="10dp"
                            android:text="@string/to_do_list"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/musicCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/creamColor"
                android:orientation="vertical">

                <!--                <TextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:padding="10dp"-->
                <!--                    android:text="Music Player"-->
                <!--                    android:textColor="@color/redLightColor"-->
                <!--                    android:fontFamily="@font/fredoka_one"-->
                <!--                    android:textSize="17sp" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="current artist and song name"
                    android:textColor="@color/redLightColor"
                    android:textSize="17sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_skip_previous_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_play_arrow_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_skip_next_24" />

                </FrameLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/swipeToSeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:drawableBottom="@drawable/ic_baseline_expand_more_24"
            android:text="@string/swipe_to_see_more"
            android:textSize="15sp" />


    </LinearLayout>


</LinearLayout>